<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity"
    tools:openDrawer="start">

        <!-- Main Content -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="16dp"
            android:background="@color/background_color">

                <!-- Image -->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_desc"
                    />

                <!-- Title -->
                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/title_text"/>

                <!-- Description -->
                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleTextView"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/description_text"/>

                <!-- Deadline -->
                <TextView
                    android:id="@+id/deadlineTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/descriptionTextView"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto"
                    android:text="@string/deadline_text"/>

                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/deadlineTextView"
                    android:gravity="end"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp">

                        <!-- Update Button -->
                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/updatebutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/baseline_edit_24"
                            android:contentDescription="@string/update_button_desc"
                            app:backgroundTint="@color/button_color"/>

                        <!-- Delete Button -->
                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/deletebutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_delete_24"
                            android:contentDescription="@string/delete_button_desc"
                            app:backgroundTint="@color/button_color"/>
                </LinearLayout>
        </RelativeLayout>

        <!-- Navigation View -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
