<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddTaskActivity"
    tools:openDrawer="start">

    <!-- Main Content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp"
        android:background="@color/background_color">

        <!-- Task Name Input -->
        <EditText
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/task_name_hint"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textSize="18sp"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"/>

        <!-- Description Input -->
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/description_hint"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textSize="18sp"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_below="@id/task"/>

        <!-- Deadline Input -->
        <EditText
            android:id="@+id/deadline"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/deadline_hint"
            android:fontFamily="@font/roboto"
            android:inputType="text"
            android:textSize="18sp"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_below="@id/description"/>

        <!-- Select Image Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/button_color"
            android:fontFamily="@font/roboto"
            android:text="@string/select_image"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_below="@id/deadline"/>

        <!-- Image View -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            android:layout_below="@id/btnSelectImage"/>

        <!-- Add Task Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:backgroundTint="@color/button_color"
            android:fontFamily="@font/roboto"
            android:text="@string/add_task"
            android:textSize="18sp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/imageView"/>
    </RelativeLayout>

    <!-- Navigation View -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
